# JackRose

./: .gitignore  .hgignore  JackRose.cabal  JackRose.xcf  LICENCE.md  README  README.md  package.yaml  stack.yaml
app/: JackRose.hs
sandbox/: README  README.md  default.cfg  jackrose.conf  mounty.cfg
sandbox/users/: mounty.cfg
site/: index.html
source/: .weeder.yaml  AnkiConvert.hs  AnkiSchema.hs  Application.hs  AuthoriStyle.hs  Authorisation.hs  Branding.hs  CardExpand.hs  CardItemGet.hs  CommandArgs.hs  ConfigData.hs  ConfigParse.hs  Configure.hs  ConnectionData.hs  ConnectionMake.hs  ConnectionSpec.hs  DataSource.hs  DeckData.hs  DeckSpec.hs  DespatchButtons.hs  EmailVerification.hs  ExecuteSqlStmt.hs  ExternalData.hs  ExternalSQL.hs  FailureMessage.hs  Favicon.hs  Foundation.hs  GoHome.hs  Items.hs  JRState.hs  JackRose.cabal  LearningData.hs  LearningResync.hs  LogFilter.hs  Logging.hs  Login.hs  LoginPlease.hs  LoginPost.hs  Main.hs  MaybeIntValue.hs  (+30 more)
test/: README.md  dump.text  jackrose.conf  setup.sql  testing.conf
