name:               JackRose
version:            0.2
build-type:         Simple
cabal-version:      >= 1.20

executable JackRose
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs
  build-depends:      base,
                      yesod,
                      yesod-core,
                      yesod-auth,
                      yesod-auth-account,
                      yesod-auth-hashdb,
                      text,
                      http-types,
                      bytestring,
                      fast-logger,
                      monad-logger,
                      monad-control,
                      persistent-postgresql,
                      HDBC,
                      HDBC-postgresql,
                      smtp-mail,
                      ConfigFile,
                      mtl,
                      stm,
                      transformers,
                      text-show,
                      time,
                      MissingH,
                      xml,
                      xml-conduit,
                      filepath,
                      blaze-html,
                      resourcet,
                      mime-mail,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      containers
  other-modules:      Application
                      AuthoriStyle
                      Authorisation
                      CardExpand
                      CommandArgs
                      ConnectionSpec
                      DeckData
                      DeckSpec
                      DataSource
                      EmailVerification
                      ExecuteSqlStmt
                      ExternalData
                      FailureMessage
                      Foundation
                      GoHome
                      JRState
                      LearningData
                      LearningResync
                      LogFilter
                      LoginPlease
                      MaybeIntValue
                      Persistency
                      PresentHTML
                      ReviewGet
                      ReviewPost
                      RouteData
                      ScoreGet
                      ScorePost
                      SessionItemKey
                      SiteConfigFromFile
                      SplitList
                      TextList
                      UserDeck
                      UserToId
