name:               JackRose
version:            0.8
build-type:         Simple
cabal-version:      >= 1.20

executable JackRose
  main-is:            JackRose.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs
  build-depends:      base,
                      yesod,
                      yesod-core,
                      yesod-auth,
                      yesod-auth-account,
                      yesod-auth-hashdb,
                      text,
                      http-types,
                      bytestring,
                      fast-logger,
                      monad-logger,
                      monad-control,
                      persistent-postgresql,
                      HDBC,
                      HDBC-postgresql,
                      smtp-mail,
                      ConfigFile,
                      mtl,
                      stm,
                      transformers,
                      text-show,
                      time,
                      MissingH,
                      xml,
                      xml-conduit,
                      filepath,
                      blaze-html,
                      resourcet,
                      mime-mail,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      containers
  other-modules:      Application
                      AuthoriStyle
                      Authorisation
                      Branding
                      CardExpand
                      CommandArgs
                      ConnectionSpec
                      DeckData
                      DeckSpec
                      DataSource
                      DespatchButtons
                      EmailVerification
                      ExecuteSqlStmt
                      ExternalData
                      Favicon
                      FailureMessage
                      Foundation
                      GoHome
                      JRState
                      LearningData
                      LearningResync
                      LogFilter
                      MaybeIntValue
                      Notice,
                      Persistency
                      PresentHTML
                      ReviewGet
                      ReviewPost
                      RouteData
                      ScoreGet
                      ScorePost
                      SessionItemKey
                      SiteConfigFromFile
                      SplitList
                      TextList
                      UserDeck
                      UserToId

executable AnkiConvert
  main-is:            AnkiConvert.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs
  build-depends:      base,
                      yesod,
                      yesod-auth-account,
                      bytestring,
                      text,
                      persistent,
                      transformers,
                      persistent,
                      persistent-sqlite,
                      monad-control,
                      monad-logger,
                      HDBC,
                      text-show,
                      ConfigFile,
                      mtl,
                      HDBC-postgresql,
                      containers,
                      stm,
                      time
  other-modules:
                      AnkiSchema
                      AuthoriStyle
                      Authorisation
                      Branding
                      CommandArgs
                      ConnectionSpec
                      DeckData
                      ExecuteSqlStmt
                      JRState
                      LearningData
                      LearningResync
                      LogFilter
                      MaybeIntValue
                      Persistency
                      SiteConfigFromFile
                      SplitList
                      TextList
                      UserDeck
