name:               JackRose
license:            BSD3
version:            0.8
build-type:         Simple
cabal-version:      >= 1.20

executable JackRose
  main-is:            JackRose.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs
  build-depends:      base,
                      yesod,
                      yesod-core,
                      yesod-auth,
                      yesod-auth-account,
                      text,
                      bytestring,
                      monad-logger,
                      monad-control,
                      persistent-postgresql,
                      HDBC,
                      HDBC-postgresql,
                      ConfigFile,
                      mtl,
                      stm,
                      transformers,
                      text-show,
                      time,
                      xml-conduit,
                      wai,
                      blaze-html,
                      mime-mail,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      containers
  other-modules:      Application
                      Authorisation
                      Branding
                      CardExpand
                      CardItemGet
                      CommandArgs
                      ConnectionSpec
                      DeckData
                      DeckSpec
                      DespatchButtons
                      EmailVerification
                      ExecuteSqlStmt
                      ExternalSQL
                      Favicon
                      FailureMessage
                      Foundation
                      GoHome
                      JRState
                      LearningData
                      LearningResync
                      LogFilter
                      MaybeIntValue
                      Notice,
                      Persistency
                      PersistOpenGeneral
                      PresentHTML
                      ReviewGet
                      ReviewPost
                      RouteData
                      ScoreGet
                      ScorePost
                      SessionItemData
                      SiteConfigFromFile
                      SplitList
                      TextList
                      UserDeck
                      UserToId

executable AnkiConvert
  main-is:            AnkiConvert.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs
  build-depends:      base,
                      yesod,
                      yesod-auth-account,
                      bytestring,
                      text,
                      persistent,
                      transformers,
                      persistent,
                      persistent-postgresql,
                      persistent-sqlite,
                      monad-control,
                      monad-logger,
                      HDBC,
                      text-show,
                      ConfigFile,
                      mtl,
                      HDBC-postgresql,
                      containers,
                      stm,
                      time
  other-modules:
                      AnkiSchema
                      Authorisation
                      Branding
                      CommandArgs
                      ConnectionSpec
                      DeckData
                      ExecuteSqlStmt
                      JRState
                      LearningData
                      LearningResync
                      LogFilter
                      MaybeIntValue
                      Persistency
                      PersistOpenGeneral
                      SiteConfigFromFile
                      SplitList
                      TextList
                      UserDeck
